@@ -1,5 +1,10 @@
 2003-09-07 John Fleck <jfleck@inkstain.net>
 
+	* rnplatform.xml
+	more platform additions
+
+2003-09-07 John Fleck <jfleck@inkstain.net>
+
 	* rncontrolcenter.xml
 	* rnnewmaintainers.xml
 	* rnthanks
